# mark-ai

./: MARKET_ANALYSIS_GUIDE.md  PITCH_DECK_GUIDE.md  README.md  SETUP.md  start-dev.sh
.windsurf/rules/: hackathon-rules.md
backend/: .gitignore  main.py  pyproject.toml
backend/market_analysis/: analyzer.py  cache.py  google_market_search.py
backend/pitch_deck/: generator.py
backend/routers/: github.py
backend/services/: pitch_deck_service.py  sector_analyzer.py
backend/tools/: tools.py
backend/vectorstore/: chunker.py  embeddings.py  indexer.py  retrieval.py  store.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: LandingPage.jsx  PitchDeckGenerator.jsx
frontend/src/lib/: api.js
